--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         אני מזמינה אותך לשיחה אישית ללא התחייבות.<br>
         המסע שלך מתחיל בצעד אחד אמיתי.
     </p>
-    <form class="contact-form" action="xdkwllzk" method="POST">
+    <form class="contact-form" action="https://formspree.io/f/xdkwllzk" method="POST">
         <label>
             שם מלא
             <input type="text" name="fullName" required>
@@ -240,4 +240,5 @@
         </footer>
     </div>
 </body>
+
 </html>
