--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
         אני מזמינה אותך לשיחה אישית ללא התחייבות.<br>
         המסע שלך מתחיל בצעד אחד אמיתי.
     </p>
-    <form class="contact-form">
-       <form action="https://formspree.io/f/xdkwllzk" method="POST">
+    <form class="contact-form" action="https://formspree.io/f/xdkwllzk" method="POST">
         <label>
             שם מלא
             <input type="text" name="fullName" required>
@@ -243,5 +242,6 @@
 </body>
 
 </html>
+
 
 
