--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <header>
             <h1>לשבור את תקרת הזכוכית הפנימית שלך</h1>
             <p>לא זו שבחוץ, אלא זו שבתוכך.<br>זו שמציבה גבול כמעט בלתי נראה,<br>בין “אני חיה” לבין “אני חיה באמת”.</p>
-            <img src="path-to-lighthouse-image.jpg" alt="מגדלור" class="header-image">
+            <img src="efrats.png" alt="מגדלור" class="header-image">
         </header>
 
         <section class="intro">
@@ -242,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
