--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
         <header>
             <h1>לשבור את תקרת הזכוכית הפנימית שלך</h1>
             <p>לא זו שבחוץ, אלא זו שבתוכך.<br>זו שמציבה גבול כמעט בלתי נראה,<br>בין “אני חיה” לבין “אני חיה באמת”.</p>
-            <img src="efrats.png" alt="מגדלור" class="header-image">
         </header>
 
         <section class="intro">
@@ -151,6 +150,7 @@
                 מסייעת לנשים לשבור את תקרת הזכוכית הפנימית שלהן, לפרק דפוסים ישנים,<br>
                 לעבור שינוי תודעתי ולהגיע למטרות שלהן, דרך אימון ממוקד תוצאה בשיטת המגדלור.
             </p>
+            <img src="efrats.png" alt="אפרת" class="header-image" size=50%>
         </section>
 
         <section class="feeling">
@@ -242,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
