--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         .header-image, .method-image {
-            width: 100%;
+            width: 50%;
             max-width: 600px;
             height: auto;
             margin: 20px auto;
@@ -150,7 +150,7 @@
                 מסייעת לנשים לשבור את תקרת הזכוכית הפנימית שלהן, לפרק דפוסים ישנים,<br>
                 לעבור שינוי תודעתי ולהגיע למטרות שלהן, דרך אימון ממוקד תוצאה בשיטת המגדלור.
             </p>
-            <img src="efrats.png" alt="אפרת" class="header-image" size=50%>
+            <img src="efrats.png" alt="אפרת" class="header-image">
         </section>
 
         <section class="feeling">
@@ -242,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
