--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
             margin: 0 auto;
             padding: 20px;
         }
+        
 
         header {
             text-align: center;
-            padding: 50px 20px;
-            background-color: #e8f0e9;
+            background-color: #627b65;
+            padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
         }
 
         header h1 {
             font-family: 'Rubik', sans-serif;
             font-size: 2.5rem;
-            color: #2e7d32;
+            color: #ffffff;
             margin-bottom: 20px;
         }
 
@@ -43,7 +46,7 @@
         }
 
         .header-image, .method-image {
-            width: 50%;
+            width: 30%;
             max-width: 600px;
             height: auto;
             margin: 20px auto;
@@ -58,13 +61,30 @@
         h2 {
             font-family: 'Rubik', sans-serif;
             font-size: 2rem;
-            color: #d81b60;
+            color: #627b65;
             margin-bottom: 20px;
+        }
+        h3
+        {
+
+font-family: 'Rubik', sans-serif;
+            font-size: 2rem;
+            color: #ffffff;
+            margin-bottom: 20px;
+
+
+
         }
 
         p {
-            font-size: 1.1rem;
+            font-size: 1.3rem;
             margin-bottom: 20px;
+        }
+
+        pw {
+            font-size: 1.3rem;
+            margin-bottom: 20px;
+            color:white;
         }
 
         ul {
@@ -73,9 +93,17 @@
         }
 
         ul li {
-            font-size: 1.1rem;
+            font-size: 1.3rem;
             margin: 10px 0;
         }
+
+        
+        ul liw {
+            font-size: 1.3rem;
+            margin: 10px 0;
+            color: white;
+        }
+
 
         .contact-form {
             max-width: 600px;
@@ -115,10 +143,27 @@
 
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #e8f0e9;
-            margin-top: 40px;
+            background-color: #627b65;
+             padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
         }
+        .box {
+    background: #e6e1dd;
+    padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
+}
+.box2
+{
+ background: #627b65;
+    padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
+
+
+
+}
 
         @media (max-width: 768px) {
             header h1 {
@@ -140,9 +185,9 @@
     <div class="container">
         <header>
             <h1>לשבור את תקרת הזכוכית הפנימית שלך</h1>
-            <p>לא זו שבחוץ, אלא זו שבתוכך.<br>זו שמציבה גבול כמעט בלתי נראה,<br>בין “אני חיה” לבין “אני חיה באמת”.</p>
+            <pw>לא זו שבחוץ, אלא זו שבתוכך.<br>זו שמציבה גבול כמעט בלתי נראה,<br>בין “אני חיה” לבין “אני חיה באמת”.</pw>
         </header>
-
+<div class="box">
         <section class="intro">
             <h2>נעים מאוד, אני אפרת דוד ששון</h2>
             <p>
@@ -152,37 +197,39 @@
             </p>
             <img src="efrats.png" alt="אפרת" class="header-image">
         </section>
-
+</div>
+<div class="box2">
         <section class="feeling">
-            <p>ואם את כאן, אולי משהו בך כבר מרגיש כך:</p>
+            <h3>ואם את כאן, אולי משהו בך כבר מרגיש כך</h3>
             <ul>
-                <li>שאת מתפקדת, אבל לא באמת חיה.</li>
+                <liw>שאת מתפקדת, אבל לא באמת חיה.</li>
                 <li>שאת עונה על ציפיות, אבל לא על הקול הפנימי שלך.</li>
                 <li>שאת רוצה שינוי, אבל לא בטוחה מאיפה להתחיל.</li>
             </ul>
-            <p>אז הגעת למקום הנכון.<br>כי המסע שלך לא חייב להתחיל בצעד גדול,<br>רק בצעד אמיתי.</p>
+            <pw>אז הגעת למקום הנכון.<br>כי המסע שלך לא חייב להתחיל בצעד גדול,<br>רק בצעד אמיתי.</pw>
+            </div>
         </section>
-
+<div class="box">
         <section class="method">
-            <h2>✨ מה זה בעצם “שיטת המגדלור”?</h2>
+            <h2> מה זה בעצם “שיטת המגדלור”?</h2>
             <p>
                 שיטה שפותחה מתוך ניסיון וליווי של מאות נשים.<br>
                 היא מחברת עומק רגשי עם תנועה קדימה, ומאפשרת לך:
             </p>
             <ul>
-                <li>✅ לזהות את מנגנוני ההפעלה שלך</li>
-                <li>✅ להבין מה עוצר ומה מניע אותך</li>
-                <li>✅ לפרק פחדים, אשמה וריצוי</li>
-                <li>✅ לבנות מסלול חיים מדויק, שמתאים לך, באמת</li>
-                <li>✅ לנוע קדימה באומץ, ברכות ובבהירות</li>
+                <li> לזהות את מנגנוני ההפעלה שלך</li>
+                <li> להבין מה עוצר ומה מניע אותך</li>
+                <li> לפרק פחדים, אשמה וריצוי</li>
+                <li> לבנות מסלול חיים מדויק, שמתאים לך, באמת</li>
+                <li>לנוע קדימה באומץ, ברכות ובבהירות</li>
             </ul>
             <p>זו לא רק שיטה - זו דרך לחיות אחרת.</p>
-            <img src="path-to-woman-image.jpg" alt="אישה מול תקרה שקופה" class="method-image">
         </section>
-
+</div>
+<div class="box2">
         <section class="about">
-            <h2>קצת עליי</h2>
-            <p>
+            <h3>קצת עליי</h3>
+            <pw>
                 אני אפרת דוד ששון, אמא לרואי ותמר,<br>
                 מנטורית לדיוק קריירה ולמיצוי שבילי חיים.<br>
                 לאורך כל חיי הייתי אדם של אנשים,<br>
@@ -199,9 +246,10 @@
                 אז הפכתי את המסע האישי שלי לדרך עבור נשים אחרות.<br>
                 אני מלווה נשים אמיצות לזהות, לשחרר, לבחור ולנוע,<br>
                 מתוך אמת, בהירות וקשב לעצמן.
-            </p>
+            </pw>
         </section>
-
+</div>
+<div class="box">
         <section class="cta">
     <h2>רוצה להתחיל?</h2>
     <p>
@@ -230,19 +278,18 @@
         <button type="submit">שלחי לי את הפרטים שלך</button>
             </form>
         </section>
-
+</div>
         <footer>
-            <p>
+            <pw>
                 אפרת דוד ששון<br>
                 מנטורית ומאמנת רגשית<br>
                 לדיוק קריירה, מיצוי שבילי חיים ופריצה פנימית אמיצה.
-            </p>
+            </pw>
         </footer>
     </div>
 </body>
 
 </html>
-
 
 
 
